fix body margin on mobile #9

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -99,8 +99,6 @@ pre {
   max-width: 750px;
   margin-right: auto;
   margin-left: auto;
-  padding-right: 1rem;
-  padding-left: 1rem;
   @extend %clearfix;
 }
 
